Mon Mar 11 16:23:46 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/tests/ImplRepo/RestartServer/RestartServer.mpc:
        * orbsvcs/tests/ImplRepo/scale_clients/scale_clients.mpc:
        * orbsvcs/tests/ImplRepo/servers_list/servers_list.mpc:

          For server project add imr_client to base projects
          to support resolving ImR client code for static builds.

Mon Mar 11 14:51:28 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/tests/FT_Naming/Replication/run_test.pl:

          Added to wait time for spawn of client as it may
          take longer than 15 seconds to run on some systems
          such as a SPARC T1000.

          Removed duplicate function definition causing prototype
          mismatch warning from perl.

Mon Mar 11 13:33:14 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/tests/FT_Naming/FaultTolerant/client.cpp:

          Added sleep in test after first failure to allow time for the
          replication to happen between redundant servers.

Mon Mar 11 13:17:41 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * NEWS:
        * docs/Options.html:
        * orbsvcs/tests/ImplRepo/RestartServer/MessengerClient.cpp:

          Added AIX to systems not supporting -ORBForwardOnReplyClosedLimit.

Mon Mar 11 09:42:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/Bug_4097_Regression/Bug_4097_Regression.cpp:

        Missing main try/catch coverity fix.

Sun Mar 10 05:19:06 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Dynamic/client.cpp:
        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Static/client.cpp:

          Fix wchar compatibility.

Sat Mar  9 19:08:55 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Dynamic/run_test.pl:

          Fix the delay for the new test_4 client. It necessarily runs longer