@@ -1,3 +1,11 @@
+Mon Mar 11 19:25:19 UTC 2013  Byron Harris  <harrisb@ociweb.com>
+
+        * orbsvcs/ImplRepo_Service/Locator_Options.cpp:
+
+          Generate error if more than one persistence mechanism
+          type is specifed. Generate error if --primary or --backup
+          is based and --directory is not.
+
 Mon Mar 11 16:23:46 UTC 2013  Byron Harris  <harrisb@ociweb.com>
 
         * orbsvcs/tests/ImplRepo/RestartServer/RestartServer.mpc:
